[metadata]
name = wsh
url = https://github.com/chbrandt/wsh
author = Carlos H. Brandt
description = Python sh wrapper for docker/isis3 handling
long_description = file:README.md
long_description_content_type = text/markdown

keywords =
    sh
    docker

classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Scientist/Engineer

license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = wsh/_version.py
versionfile_build = wsh/_version.py
tag_prefix =
parentdir_prefix = wsh-


[options]
python_requires = >=3.6
packages = find:
install_requires =
    sh
zip_safe = False
