[metadata]
name = osh
url = https://github.com/chbrandt/osh
author = Carlos H. Brandt
description = Python/sh wrapper for executing commands inside docker containers and mapping host:container volumes
long_description = file:README.md
long_description_content_type = text/markdown

keywords =
    sh
    docker

classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Scientist/Engineer

license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = osh/_version.py
versionfile_build = osh/_version.py
tag_prefix =
parentdir_prefix = osh-


[options]
python_requires = >=3.6
packages = find:
install_requires =
    sh >= 1.14
zip_safe = False
