[metadata]
name = shoosh
url = https://github.com/chbrandt/shoosh
description = Python/sh wrapper for executing commands inside docker containers and mapping host:container volumes
long_description = file:README.md
long_description_content_type = text/markdown
author = Carlos H. Brandt

keywords =
    sh
    docker

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = shoosh/_version.py
versionfile_build = shoosh/_version.py
tag_prefix =
parentdir_prefix = shoosh-


[options]
packages = find:
python_requires = >=3.6
install_requires =
    sh >= 1.14
zip_safe = False
